<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>

        <TextView
            android:id="@+id/sing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sing_up"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"/>
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textSize="25sp"
            android:textColor="@color/green"
            app:layout_constraintStart_toStartOf="@id/sing"
            app:layout_constraintTop_toBottomOf="@id/sing"
            app:layout_constraintEnd_toEndOf="@id/sing"
            android:layout_marginTop="20dp"/>


        <EditText
            android:id="@+id/usarname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_baseline_person_pin_circle_24"
            app:layout_constraintTop_toBottomOf="@id/sing_up"
            app:layout_constraintStart_toStartOf="@id/sing_up"
            app:layout_constraintEnd_toEndOf="@id/sing_up"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@id/usarname"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/usarname"
            app:layout_constraintTop_toBottomOf="@id/usarname" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_baseline_info_24"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintEnd_toEndOf="@id/email"/>

        <CheckBox
            android:id="@+id/boxx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_would_like_to_receive_your_newsletter_and_other_promotional_information"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password"/>


        <Button
            android:id="@+id/sing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/sing"
            android:background="@drawable/sing_drawble"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@id/boxx"
            app:layout_constraintTop_toBottomOf="@id/boxx"
            app:layout_constraintEnd_toEndOf="@id/boxx"
            />

        <Button
            android:id="@+id/X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/x"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/x_drawble"
            />
        <Button
            android:id="@+id/Show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show"
            android:textSize="14sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintBottom_toBottomOf="@id/password"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

